# ArmoniK

./: CMakeLists.txt  Readme.md  rules.mk
ArmoniK.Alarm/: CMakeLists.txt
ArmoniK.Alarm/include/: vscevent.h
ArmoniK.Alarm/src/: vscevent.cpp
ArmoniK.Analytics/Motiondetection/: CMotiondetection.h  CPictureAnalyser.h  CTraceImage.cpp  ParamAnalytics.h
ArmoniK.Bus/conf/: rbus_monitor.service
ArmoniK.Common/: CMakeLists.txt
ArmoniK.Common/header/: license.h
ArmoniK.Common/header/utility/: vpoco.hpp
ArmoniK.Common/header/vdb/: recordwrapper.hpp  vdb.hpp
ArmoniK.Common/src/: license.cpp
ArmoniK.Common/src/cmndemo/: cmndemo.cpp
ArmoniK.Common/src/cppkit/: memory_pool.cpp.tmp
ArmoniK.Common/src/utility/: epollwrapper.cpp
ArmoniK.Common/src/vdb/: hdfswrapper.cpp  indexdb.cpp  pbsession.cpp  pbwrapper.cpp  vhdfsdb.cpp
ArmoniK.Common/src/vrender/: d3d_render.cpp  vvideodraw.hpp
ArmoniK.OCM/src/: main.cpp
ArmoniK.Player/: CMakeLists.txt
ArmoniK.Player/header/: camera.h  eventserver.h  factory.h  vsmotalgo.h
ArmoniK.Player/src/: camera.cpp  eventserver.cpp  factory.cpp  vplay.cpp  vsmotalgo.cpp
ArmoniK.Web/: LICENSE  package-lock.json  package.json  vue.config.js
ArmoniK.Web/public/: index.html
ArmoniK.Web/src/: http.js  main.js  store.js
ArmoniK.Worker/: CMakeLists.txt
ArmoniK.Worker/include/: mediaserver.hpp
ArmoniK.xcmn/: .project
avconfig/: CMakeLists.txt
avconfig/include/: clientconfdb.h  confdb.h  sysdb.h  videnv.h
avconfig/src/: clientconfdb.cpp  confdb.cpp  sysdb.cpp
avplayer/: CMakeLists.txt
avplayer/include/: camera.h  eventserver.h  factory.h  hdddevice.h
avplayer/src/: camera.cpp  eventserver.cpp
client/: Makefile
client/darkstyle/: style.qss
client/prj_linux/: Makefile  veclient.pro
engine/: CMakeLists.txt
engine/include/: vrtspserver.hpp  vsccalculate.hpp  vscvideowall.h  vvidpb1.h
engine/src/config/: sysdb.cpp
engine/src/server/: factory.cpp
engine/src/vservice/: vtaskmgr.cpp
engine/src/vvidonvif/: vvidonvifc.cpp
include/config/: conf.hpp  confver.hpp  linkproto.pb.cc  linksystem.pb.cc  linksystem.pb.h  restsystem.pb.cc  restsystem.pb.h  vidconf.pb.cc
modules/Motiondetection/: .cproject  .project  CMotiondetection.cpp  CMotiondetection_exports.cpp  CMotiondetection_exports.h  CPictureAnalyser.cpp  CTraceImage.h  include.h
modules/detectParking/: Makefile  detectParking
onvif/: CMakeLists.txt
onvif/include/: onvifclidis.hpp  wsclient.hpp
onvif/include/video/: h5slib.cpp
output/Ubuntu-20.04-64bit/: .htpasswd  hServer.ini
ubConfig/: CMakeLists.txt
ubConfig/include/: confdb.h  sysdb.h
ubConfig/src/: confdb.cpp  sysdb.cpp
vecvr/: CMakeLists.txt  Makefile
vecvr/include/link/: linkhandler.cpp  linkhandler.hpp  linkstream.cpp  linkstream.hpp  wslink.hpp
vecvr/main/: main.cpp  mediaserver.cpp  mediaserver.hpp  webserver.cpp  webserver.hpp
vecvr/main/link/: linkhandler.cpp  linkhandler.hpp
vecvr/main/vapi/: vapicamlist.hpp  vapisystem.hpp
vecvr/prj_linux/: .htpasswd  Makefile  RapidStor.ini  vecvr.pro
vecvr/src/: main.cpp  webserver.cpp  webserver.hpp
vecvr/src/ZLMediaKit/: CMakeLists.txt
vecvr/src/ZLToolKit/src/Thread/: AsyncTaskThread.h
vecvr/src/link/: linkhandler.cpp
vecvr/src/vapi/: vapicamlist.hpp  vapiimage.hpp  vapisystem.hpp  vwsapi.hpp
vecvr/www/: index.html
vecvr/wwwheimdall/: cluster.html  conference.html  demo.html  event.html  experiment.html  flv.html  hls.html  index.html  linkweb.html  playback.html  playback2.html  rtc.html  rtcpush.html  rtmp.html  rtmp2.html  serverfilepb.html  serverpb.html  tool.html  tour.html  ws.html
vecvr/wwwheimdall/css/: h5splayer.css
vecvr/wwwheimdall/doc/: api.html
vecvr/wwwheimdall/js/: h5sevent.js  h5splayer.js  h5splayerhelper.js  linkplayer.js
vecvr/wwwheimdall/static/css/: app.f0e88f82cb8acb37b34f7d3a5aa15ccc.css  app.f0e88f82cb8acb37b34f7d3a5aa15ccc.css.map
vecvr/wwwheimdall/static/js/: app.b60492a7d90d455b0dd3.js  app.b60492a7d90d455b0dd3.js.map  manifest.2ae2e69a05c33dfc65f8.js.map  vendor.a8c8597a271c13c544cb.js
velib/: .cproject  .project  CMakeLists.txt
velib/include/utility/: vpoco.hpp
velib/include/vdb/: hdfsrecsession.hpp  indexdb.hpp  mediafile.hpp  pbsession.hpp  pbwrapper.hpp  recordsession.hpp  recordwrapper.hpp  vdb.hpp  vdbfile.hpp  vdbtype.hpp  veventdb.hpp  vhdfsdb.hpp  vmetadata.hpp
velib/include/vplay/: vplay.hpp  vsmotalgo.hpp
velib/src/utility/: base64.cpp  base64.hpp  license.cpp  license.hpp  vpoco.cpp
velib/src/vdb/: hdfsrecsession.cpp  hdfswrapper.hpp  indexdb.cpp  mediafile.cpp  pbsession.cpp  pbwrapper.cpp  recordsession.cpp  recordwrapper.cpp  vdb.cpp  vdbfile.cpp  veventdb.cpp  vhdfsdb.cpp  vmetadatadb.cpp
velib/src/vplay/: vplay.cpp  vsmotalgo.cpp
velib/src/vrender/: d3d_render.h  internal.h  novideo.cpp  render_wrapper.hpp  sdl_render.cpp  sdl_render.h  vehwcmd.cpp  vehwcmd.hpp  video_render.h  vvideodraw.cpp  vvideodraw.hpp
velib/velibdemo/: main.cpp  velibdemo.cpp  velibdemo.h
veuilib/include/: vdmining.hpp  vemap.hpp  vevent.hpp  vmotconf.hpp  vonvifdismgr.hpp  vschedconf.hpp  vscloading.hpp  vscvwidget.h  vstyle.hpp  vtaskmgr.hpp  vvidpbcontrol.h  vvidpbwall.h  vvidpbwidget.h  vvipcmgr.hpp
veuilib/prj_linux/: Makefile  veuilib.pro
veuilib/src/: velibui.qrc
xcmnlib/: .cproject  CMakeLists.txt
xcmnlib/include/XSDK/: XLogger.h
xcmnlib/include/rapidmedia/: rapidmedia.hpp
xcmnlib/include/utility/: debug.hpp  log.hpp  miningtype.hpp  typeexport.hpp  utility.hpp  utilitytimer.hpp  videotype.hpp
xcmnlib/src/cppkit/: ck_logger.cpp
xcmnlib/src/ffkit/: av_demuxer.cpp  av_muxer.cpp
xcmnlib/src/rapidmedia/: rapidaudiodec.cpp  rapidaudiodec.hpp  rapiddec.hpp  rapiddecsink.cpp  rapiddecsink.hpp  rapiddxva2dec.cpp  rapiddxva2dec.hpp  rapidffmpegdec.cpp  rapidmedia.cpp  rapidmediadata.cpp  rapidmediadata.hpp  rapidyamidec.cpp  rapidyamidec.hpp
xcmnlib/src/rapidrtsp/: rapidrtsp.cpp  rapidrtsp.h  rapidrtsplog.cpp  rapidrtsplog.h  ros.h  rtspdef.h
xcmnlib/src/utility/: debug.cpp  epollwrapper.cpp  epollwrapper.hpp  libcli.c  libcli.h  utility.cpp
(+862 files in other folders)
