cmake_minimum_required(VERSION 3.15)
project(xcmnlib)
# Add the include directories
include_directories(
    ./include/utility
    ./include/rapidmedia
    ./include/ffkit
    ./include/cppkit
    ./include/hyperhttp
    ./include/
    ./src/
    ./src/utility
    ./src/rapidrtsp
    ./src/rapidmedia
    ../3rdparty/poco/Data/include
    ../3rdparty/poco/Foundation/include
    ../3rdparty/poco/Data/SQLite/include
    ../3rdparty/spdlog/include
    ../3rdparty/live555/live555/include
    ../3rdparty/live555/BasicUsageEnvironment/include
    ../3rdparty/live555/groupsock/include
    ../3rdparty/live555/liveMedia/include
    ../3rdparty/live555/UsageEnvironment/include
    ../onvif/include
    ../onvif/include/video
    ${CMAKE_INSTALL_PREFIX}/include
)


# Add source files here
set(SOURCES
    ./src/ffkit/argb24_to_yuv420p.cpp
    ./src/ffkit/av_demuxer.cpp
    ./src/ffkit/av_muxer.cpp
    ./src/ffkit/av_packet.cpp
    ./src/ffkit/av_packet_factory.cpp
    ./src/ffkit/h264_decoder.cpp
    ./src/ffkit/h264_encoder.cpp
    ./src/ffkit/h264mp4_to_annexb.cpp
    ./src/ffkit/h264_transcoder.cpp
    ./src/ffkit/jpeg_decoder.cpp
    ./src/ffkit/jpeg_encoder.cpp
    ./src/ffkit/fflocky.cpp
    ./src/ffkit/ffoptions.cpp
    ./src/ffkit/ffutils.cpp
    ./src/ffkit/yuv420p_to_argb24.cpp
    ./src/cppkit/ck_actor.cpp
    ./src/cppkit/ck_byte_ptr.cpp
    ./src/cppkit/ck_command_queue.cpp
    ./src/cppkit/ck_dynamic_library.cpp
    ./src/cppkit/ck_error_msg.cpp
    ./src/cppkit/ck_exception.cpp
    ./src/cppkit/ck_json.cpp
    ./src/cppkit/ck_large_files.cpp
    ./src/cppkit/ck_library_id.cpp
    ./src/cppkit/ck_logger.cpp
    ./src/cppkit/ck_memory.cpp
    ./src/cppkit/ck_memory_map.cpp
    ./src/cppkit/ck_nullable.cpp
    ./src/cppkit/ck_path.cpp
    ./src/cppkit/ck_pool.cpp
    ./src/cppkit/ck_socket_address.cpp
    ./src/cppkit/ck_socket.cpp
    ./src/cppkit/ck_sprintf.cpp
    ./src/cppkit/ck_stack_trace.cpp
    ./src/cppkit/ck_string.cpp
    ./src/cppkit/ck_string_slice.cpp
    ./src/cppkit/ck_timer.cpp
    ./src/cppkit/ck_time_utils.cpp
    ./src/cppkit/ck_udp_receiver.cpp
    ./src/cppkit/ck_udp_sender.cpp
    ./src/cppkit/ck_uuid_utils.cpp
    ./src/cppkit/ck_variant.cpp
    ./src/hyperhttp/client_request.cpp
    ./src/hyperhttp/client_response.cpp
    ./src/hyperhttp/hyperhttp_exception.cpp
    ./src/hyperhttp/hyperhttp_utils.cpp
    ./src/hyperhttp/methods.cpp
    ./src/hyperhttp/server_request.cpp
    ./src/hyperhttp/server_response.cpp
    ./src/hyperhttp/hyperuri.cpp
    ./src/hyperhttp/hyperurl.cpp
    ./src/XSDK/LargeFiles.cpp
    ./src/XSDK/OS.cpp
    ./src/XSDK/Rand.cpp
    ./src/XSDK/StackTrace.cpp
    ./src/XSDK/TimeUtils.cpp
    ./src/XSDK/UuidUtils.cpp
    ./src/XSDK/XBaseObject.cpp
    ./src/XSDK/XBlockingQueue.cpp
    ./src/XSDK/XCache.cpp
    ./src/XSDK/XCommandQueue.cpp
    ./src/XSDK/XDateTuple.cpp
    ./src/XSDK/XDomParser.cpp
    ./src/XSDK/XDomParserNode.cpp
    ./src/XSDK/XDuration.cpp
    ./src/XSDK/XDynamicLibrary.cpp
    ./src/XSDK/XException.cpp
    ./src/XSDK/XFullVariant.cpp
    ./src/XSDK/XGuard.cpp
    ./src/XSDK/XHash.cpp
    ./src/XSDK/XInternalList.cpp
    ./src/XSDK/XJSON.cpp
    ./src/XSDK/XListBox.cpp
    ./src/XSDK/XLogger.cpp
    ./src/XSDK/XMD5.cpp
    ./src/XSDK/XMemory.cpp
    ./src/XSDK/XMemoryMap.cpp
    ./src/XSDK/XMonoClock.cpp
    ./src/XSDK/XObjCount.cpp
    ./src/XSDK/XObjectProxy.cpp
    ./src/XSDK/XPath.cpp
    ./src/XSDK/XSocketAddress.cpp
    ./src/XSDK/XSocket.cpp
    ./src/XSDK/XSSLSocket.cpp
    ./src/XSDK/XStackTrace.cpp
    ./src/XSDK/XStopWatch.cpp
    ./src/XSDK/XString.cpp
    ./src/XSDK/XStringSlice.cpp
    ./src/XSDK/XSymbol.cpp
    ./src/XSDK/XSystemStats.cpp
    ./src/XSDK/XTaskBase.cpp
    ./src/XSDK/XTime.cpp
    ./src/XSDK/XTimedCommandQueue.cpp
    ./src/XSDK/XTimer.cpp
    ./src/XSDK/XTimeZone.cpp
    ./src/XSDK/XUDPReceiver.cpp
    ./src/XSDK/XUDPSender.cpp
    ./src/XSDK/XVariant.cpp
    ./src/XSDK/XUuid.cpp
    ./src/XSDK/POSIX/Sprintf.cpp
    ./src/XSDK/POSIX/XCondition.cpp
    ./src/XSDK/POSIX/XMutex.cpp
    ./src/AVKit/ARGB24ToYUV420P.cpp
    ./src/AVKit/AVDeMuxer.cpp
    ./src/AVKit/AVMuxer.cpp
    ./src/AVKit/H264Decoder.cpp
    ./src/AVKit/H264Encoder.cpp
    ./src/AVKit/H264MP4ToAnnexB.cpp
    ./src/AVKit/H264Transcoder.cpp
    ./src/AVKit/JPEGEncoder.cpp
    ./src/AVKit/Locky.cpp
    ./src/AVKit/Options.cpp
    ./src/AVKit/Utils.cpp
    ./src/AVKit/YUV420PToARGB24.cpp
    ./src/Webby/ClientSideRequest.cpp
    ./src/Webby/ClientSideResponse.cpp
    ./src/Webby/RequestBody.cpp
    ./src/Webby/ServerSideRequest.cpp
    ./src/Webby/ServerSideResponse.cpp
    ./src/Webby/SoapArgs.cpp
    ./src/Webby/URI.cpp
    ./src/Webby/URL.cpp
    ./src/Webby/WebbyException.cpp
    ./src/Webby/WebbyUtils.cpp
    ./src/utility/tinythread.cpp
    ./src/utility/debug.cpp
    ./src/utility/libcli.c
    ./src/utility/utility.cpp
    ./src/rapidrtsp/rapidrtsp.cpp
    ./src/rapidrtsp/rapidrtsplog.cpp
    ./src/rapidmedia/rapidaudiodec.cpp
    ./src/rapidmedia/rapiddecsink.cpp
    ./src/rapidmedia/rapidffmpegdec.cpp
    ./src/rapidmedia/rapidmedia.cpp
    ./src/rapidmedia/rapidmediadata.cpp
    ../onvif/include/video/h5s_h264_sink.cpp
    ../onvif/include/video/h5slib.cpp
    ../onvif/include/video/h264_bit_reader.cpp
    ../onvif/include/video/h264_parser.cpp
    )

ADD_LIBRARY(${PROJECT_NAME} SHARED 
            ${SOURCES})

install(TARGETS ${PROJECT_NAME} 
        LIBRARY DESTINATION lib/
        ARCHIVE DESTINATION lib/)